# LLM_cpp

./: LICENSE  README.md
GPT-2/: CMakeLists.txt
GPT-2/datasets/the-verdict/predict/: the-verdict-1.txt  the-verdict-2.txt
GPT-2/scripts/: predict.sh  question.sh  test.sh  train.sh
GPT-2/src/: loss.cpp  loss.hpp  main.cpp  networks.cpp  networks.hpp  predict.cpp  question.cpp  test.cpp  train.cpp  valid.cpp
GPT-3/: CMakeLists.txt
GPT-3/scripts/: predict.sh  question.sh  test.sh  train.sh
GPT-3/src/: main.cpp  networks.cpp  networks.hpp  predict.cpp  question.cpp  test.cpp  train.cpp  valid.cpp
utils/: CMakeLists.txt  dataloader.cpp  dataloader.hpp  datasets.cpp  datasets.hpp  visualizer.cpp  visualizer.hpp
